# POO

./: .gitignore.txt  README.md  coverage.Elev.cpp.html  coverage.Elev.h.html  coverage.html  coverage.main.cpp.html  coverage.materie.cpp.html  coverage.materie.h.html  coverage.materie_builder.h.html  coverage.materie_imp.cpp.html  coverage.materie_imp.h.html  coverage.situatie_scolara.cpp.html  coverage.situatie_scolara.h.html
.github/workflows/: c-cpp.yml
Proiect/: .gitignore  .gitignore.txt  CMakeLists.txt  Elev.cpp  Elev.h  date_elev.in  date_elev.out  main.cpp  materie.cpp  materie.h  materie_builder.cpp  materie_builder.h  materie_imp.cpp  materie_imp.h  situatie_scolara.cpp  situatie_scolara.h
tema/: CMakeLists.txt  main.cpp
